改善轉場＆登入頁面

--- a/1_30_AppDemo/Base.lproj/Main.storyboard
+++ b/1_30_AppDemo/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
         <!--Register-->
         <scene sceneID="DcT-BF-D9U">
             <objects>
-                <viewController storyboardIdentifier="loginVC" id="lwA-Fi-qbO" customClass="Register" customModule="__30_AppDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lwA-Fi-qbO" customClass="Register" customModule="__30_AppDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PxV-d6-o0j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -178,7 +178,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmq-xy-Vbd">
                                 <rect key="frame" x="18" y="89" width="162" height="21"/>
@@ -206,7 +206,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -226,7 +226,7 @@
         <!--Navigation Controller-->
         <scene sceneID="OIe-b5-4gJ">
             <objects>
-                <navigationController id="D8N-e3-obI" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="loginVC" id="D8N-e3-obI" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ms4-V3-99j">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -246,7 +246,7 @@
                     <view key="view" contentMode="scaleToFill" id="N4D-IS-EgB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.42220046249999998" green="0.1950833411" blue="0.67768377589999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="eLS-W5-D0W"/>
                     </view>
                 </viewController>
